src/yini_test/cases/golden/strict/valid/numbers/negative-numbers.strict.yini
@yini strict

^ Numbers
negativeInteger = -42
negativeFloat = -3.5
negativeExponent = -1e-3

/END
