src/yini_test/cases/golden/strict/invalid/numbers/malformed-binary.strict.yini
@yini strict

^ Numbers
value = 0b102

/END
